MAJ de la doc + Ajout des tiquetsMixs (Models, Controllers, Services) + MAJ de la collection postman + MAJ OpenAPI
