# api-auto-acv/app.js
@@ -5,16 +5,6 @@ const app = express()
 
 app.use(express.json())
 
-//routes pour les véhicules
-const vehiculesRouter = require('./routers/vehicles');
-app.use('/vehicules', vehiculesRouter);
-//routes pour les sources d'énergie
-const powerSourcesRouter = require('./routers/powerSources');
-app.use('/sourcesEnergies', powerSourcesRouter);
-//routes pour les utilisateurs
-const usersRouter = require('./routers/users');
-app.use('/users', usersRouter);
-//middleware
 //Middleware to validate the request and response against the OpenAPI schema
 app.use(
     OpenApiValidalidator.middleware({
@@ -23,6 +13,18 @@ app.use(
         ignoreUndocumented : true
     })
 );
+
+//routes pour les véhicules
+const vehiculesRouter = require('./routers/vehicles');
+app.use('/vehicules', vehiculesRouter);
+
+//routes pour les sources d'énergie
+const powerSourcesRouter = require('./routers/powerSources');
+app.use('/sourcesEnergies', powerSourcesRouter);
+//routes pour les utilisateurs
+
+const usersRouter = require('./routers/users');
+app.use('/users', usersRouter);
 
 //routes pour les mixsEnergetiques
 const mixsEnergetiquesRouter = require('./routers/mixsEnergetiques');
@@ -35,5 +37,9 @@ app.use('/tiquetsVehicules', ticketsVehiculesRouter);
 //routes pour les tiquetsSources
 const ticketsSourcesRouter = require('./routers/tiquetsSources');
 app.use('/tiquetsSources', ticketsSourcesRouter);
+
+//routes pour les tiquetsMixs
+const ticketsMixsRouter = require('./routers/tiquetsMixs');
+app.use('/tiquetsMixs', ticketsMixsRouter);
 
 module.exports = app
