# api-auto-acv/openApi.yml
@@ -450,6 +450,18 @@ paths:
                 $ref: '#/components/schemas/sourcesEnergies'
         "404":
           description: "Le tiquet source n'a pas été trouvé"
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  success:
+                    type: "boolean"
+                    example: false
+                  message:
+                    type: "string"
+                    example: "Le tiquet source n'a pas été trouvé"
+            
   /tiquetsMixs:
     get:
       tags:
@@ -462,7 +474,7 @@ paths:
           content:
             application/json:
               schema: 
-                $ref: '#/components/schemas/mixsEnergetiques'
+                $ref: '#/components/schemas/tiquetsMixs'
         "404":
           description: "Les tiquets mixs n'existe pas"
     post:
@@ -476,14 +488,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/mixsEnergetiques'
+              $ref: '#/components/schemas/tiquetsMixs'
       responses:
         "201":
           description: "Un tiquet mix à été ajouté"
           content:
             application/json:
               schema: 
-                $ref: '#/components/schemas/mixsEnergetiques'
+                $ref: '#/components/schemas/tiquetsMixs'
         "400": 
           description: "Un champs essentiels n'est pas présent ou incorrect"
   /tiquetsMixs/{id}:
@@ -757,3 +769,42 @@ components:
           type: string
         id_vehicule:
           type: integer
+    tiquetsMixs:
+      type: "object"
+      properties:
+        wind:
+          type: "number"
+          example: 13.3
+        solar:
+          type: "number"
+          example: 13.3
+        geothermal:
+          type: "number"
+          example: 13.3
+        biomass:
+          type: "number"
+          example: 13.3
+        hydroelectric:
+          type: "number"
+          example: 13.3
+        nuclear:
+          type: "number"
+          example: 13.3
+        coal:
+          type: "number"
+          example: 13.3
+        oil:
+          type: "number"
+          example: 13.3
+        gaz-fired:
+          type: "number"
+          example: 13.3
+        source:
+          type: "string"
+          example: 13.3
+        country:
+          type: "string"
+          example: "France"
+        id_user:
+          type: "integer"
+          example: 1
